2011-05-28:
	* enable CONFIG_BUSYBOX_CONFIG_FEATURE_MOUNT_HELPERS
	* enable CONFIG_BUSYBOX_CONFIG_FEATURE_MOUNT_LABEL
	* fix fat dependency to nls_base

2011-05-21:
	* fix vfat mount (add nls_base, nls_cp437)
	* fix max_scsi_luns to max_luns
	* add losetup in backfire config

2011-05-20:
	* add nls_utf8 in /etc/modules.d/90-usb-storage
	* remove nsl_ascii.ko

2011-05-17:
	* enable multiple luns by max_scsi_luns
	* add sr_mod/sg/st
	* remove sudo in Makefile

2011-05-16:
	* add config for a web-integrated firmware (6M)

2011-05-15:
	* add openldap-utils in repository
	* enable CONFIG_EPOLL
	* enable CONFIG_TMPFS_POSIX_ACL (tmpfs permissions?)
	* enable CONFIG_SHMEM, disable CONFIG_TINY_SHMEM (tmpfs in df?)
	* enable CONFIG_FUTEX

2011-05-11:
	* fix /tmp permission bits to 1777 in rootfs (not realy work yet)

2011-04-27:
	* add rtnetlink/macvlan, prepare to port
	* add new FAQ entry

2011-04-26:
	* add ip

2011-04-25:
	* add backfire config for rootfs and repository respectively

2011-04-23:
	* add block-hotplug

2011-04-21:
	* mv /etc/kernel.conf to /etc/config/kernel, 
	  and accordingly re-write /etc/init.d/kconfig 
	* add FAQ

2011-04-20:
	* add /etc/init.d/kconfig /etc/kernel.conf
	* Makefile to Kbuild

2011-04-18:
	* add 8021q in 01-switch
	* add ip6tables, ip6tables-utils
	* add iptables-mod-conntrack

2011-04-17:
	* upgrade to backfire r26688
	* upgrade switch-robo
	* add xt_tcpudp in 21-nat
	* modify Makefile of DSL2760 to make it more flexible
	* revert swap-utils, already upported by busybox
	* update 90-usb-storage

2011-04-16:
	* add swap-utils

2011-04-13:
	* port kmod-switch
	* port ipt_IPID

2011-04-12:
	* refactory directory structrue
	* make xt_connlimit a separate module

2011-04-10:
	* patch ESFQ
	* patch IMQ (make use of the control buffer,
		     debugging needed, never touch skb_buff.h)
	* backport xt_connlimit
	* complete kmod-ip6tables
	* add author/license header

2011-04-09:
	* add update-opkg-status to support firmware upgrade